--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
     <script type="text/javascript"
         src="https://cdn.fusioncharts.com/fusioncharts/latest/angularjs-fusioncharts.min.js"></script>
 
+
     <script src="app.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular-sanitize.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.1.2/textAngular.min.js'></script>
+
+    <script src="https://cdn.ckeditor.com/4.16.2/full/ckeditor.js"></script>
+
+
     <title>Login App</title>
 </head>
 
