--- a/Form.html
+++ b/Form.html
@@ -1,49 +1,59 @@
-<div> ng-app="myApp">
-    <form name="studentForm" novalidate>
-        <table border="0">
-            <tr>
-                <td>Enter first name:</td>
-                <td><input name="firstname" type="text" ng-model="firstName" required>
-                    <span style="color:red" ng-show="studentForm.firstname.$dirty && studentForm.firstname.$invalid">
-                        <span ng-show="studentForm.firstname.$error.required">First Name is required.</span>
-                    </span>
-                </td>
-            </tr>
-
-            <tr>
-                <td>Enter last name: </td>
-                <td><input name="lastname" type="text" ng-model="lastName" required>
-                    <span style="color:red" ng-show="studentForm.lastname.$dirty && studentForm.lastname.$invalid">
-                        <span ng-show="studentForm.lastname.$error.required">Last Name is required.</span>
-                    </span>
-                </td>
-            </tr>
-
-            <tr>
-                <td>Email: </td>
-                <td><input name="email" type="email" ng-model="email" length="100" required>
-                    <span style="color:red" ng-show="studentForm.email.$dirty && studentForm.email.$invalid">
-                        <span ng-show="studentForm.email.$error.required">Email is required.</span>
-                        <span ng-show="studentForm.email.$error.email">Invalid email address.</span>
-                    </span>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <button ng-click="reset()">Reset</button>
-                </td>
-                <td>
-                    <button ng-disabled="studentForm.firstname.$dirty &&  
-                    studentForm.firstname.$invalid || studentForm.lastname.$dirty &&  
-                    studentForm.lastname.$invalid || studentForm.email.$dirty &&  
-                    studentForm.email.$invalid" ng-click="submit()">Submit</button>
-                </td>
-            </tr>
-
-            Gender:
-
-
-        </table>
-    </form>
+<div id="bookListWrapper" ng-app="myApp" ng-controller="DashboardController">
+    <div class="inputform">
+        <form>
+            <div ng-repeat="item in storedData" class="inv-card">
+                <div class="form-group">
+                    <label for="number">Number:</label>
+                    <input name="number" type="text" ng-model="item.number" class="form-control"
+                        placeholder="{{item.number}}" required>
+                </div>
+                <div class="form-group">
+                    <label for="item">Item:</label>
+                    <input name="item" type="text" ng-model="item.item" class="form-control" placeholder="{{item.item}}"
+                        required>
+                </div>
+                <div class="form-group">
+                    <label for="value">Value:</label>
+                    <input name="value" type="text" ng-model="item.value" class="form-control"
+                        placeholder="{{item.value}}" required>
+                </div>
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input name="title" type="text" ng-model="item.title" class="form-control"
+                        placeholder="{{item.title}}" required>
+                </div>
+                <div class="form-group">
+                    <label for="remarks">Remarks:</label>
+                    <input name="remarks" type="text" ng-model="item.remarks" class="form-control"
+                        placeholder="{{item.remarks}}" required>
+                </div>
+                <img ng-src="{{item.imgUrl}}" alt="{{item.name}}" class="card-image">
+                <hr>
+            </div>
+        </form>
+        <div class="book-details clearfix">
+            <button class="btn btn-primary" ng-click="Edit()">Edit</button>
+            <button class="btn btn-info pull-right" ng-click="goBack()">Go Back</button>
+        </div>
+    </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</ul>
+</div>
+
+</div> -->
